Se agrega chatbot, con la línea de tidio.

--- a/Clinic/Views/Home/Index.cshtml
+++ b/Clinic/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     var client = ClientOptions.Value;
     var email = $"contacto@{client.Acronym.ToLower()}.com";
     ViewData["Title"] = "Página de inicio";
+    <script src="//code.tidio.co/t6niqfwtacrz87yr3wkzsjflqe7hg5hf.js" async></script>
 }
 <!-- Hero Start -->
 <div class="container-fluid bg-primary py-5 mb-5 hero-header">
