Se agrega el código de instalación de GTM, para configurar el evento de registro.

--- a/Clinic/Views/Shared/_Layout.cshtml
+++ b/Clinic/Views/Shared/_Layout.cshtml
@@ -35,9 +35,23 @@
 
         gtag('config', 'G-7D3CE6TX41');
     </script>
-</head>
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5PPGFKG9');</script>
+    <!-- End Google Tag Manager -->
+    </head>
 
 <body class="d-flex h-100">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PPGFKG9"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="d-flex w-100 h-100 mx-auto flex-column">
         <header>
             <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light bg-light border-bottom box-shadow">
