--- a/Clinic/Views/Shared/_Layout.cshtml
+++ b/Clinic/Views/Shared/_Layout.cshtml
@@ -42,14 +42,16 @@
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5PPGFKG9');</script>
+        })(window,document,'script','dataLayer','GTM-NCJQ9VMR');</script>
     <!-- End Google Tag Manager -->
     </head>
 
 <body class="d-flex h-100">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PPGFKG9"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCJQ9VMR"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <div class="d-flex w-100 h-100 mx-auto flex-column">
